[package]
name = "client-side-web-app"
version = "0.1.0"
authors = ["lirawx <lira_wx@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # Don't forget this!

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.40"
virtual-dom-rs = "0.6.14"
css-rs-macro = "0.1"
rust-psd={path = "../../../rust-psd"}

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "ImageData",
    "MouseEvent",
    "Window",
    "console"
]